--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="games">
           <div class="status">
-            <h1><a href="">主旋律</a></h1>
+            <h1><a href="../index.html">主旋律</a></h1>
             <input type="text" />
           </div>
           <div class="cards">
